fixed gallery images jumping around as they load by implementing placeholder images

--- a/static/css/styles_pinterest.css
+++ b/static/css/styles_pinterest.css
@@ -4,10 +4,7 @@ body {
     margin: 0px;
 }
 
-.masonry-container {
-    column-gap: 10px;
-    padding: 10px;
-}
+/* old method of displaying gallery */
 
 .imageItem {
     display: inline-block;
@@ -22,37 +19,64 @@ body {
     border-radius: 15px;
 }
 
+/* new method of displaying gallery */
+
+.masonry {
+    column-gap: 10px;
+    padding: 10px;
+}
+
+.masonry-item {
+    break-inside: avoid;
+    margin-bottom: 10px;
+    background-color: #f3f3f3;
+    position: relative;
+    border-radius: 15px;
+}
+
+.masonry-item img {
+    width: 100%;
+    display: block;
+    border-radius: 15px;
+}
+
+.placeholder {
+    width: 100%;
+    background-color: #e0e0e0;
+    position: relative;
+}
+
 /* Adjust column count and width based on screen size */
 @media (min-width: 1500px) {
-    .masonry-container {
+    .masonry {
         column-count: 5;
         column-width: 300px;
     }
 }
 
 @media (max-width: 1499px) and (min-width: 1200px) {
-    .masonry-container {
+    .masonry {
         column-count: 4;
         column-width: 300px;
     }
 }
 
 @media (max-width: 1199px) and (min-width: 900px) {
-    .masonry-container {
+    .masonry {
         column-count: 3;
         column-width: 300px;
     }
 }
 
 @media (max-width: 899px) and (min-width: 600px) {
-    .masonry-container {
+    .masonry {
         column-count: 2;
         column-width: 300px;
     }
 }
 
 @media (max-width: 599px) {
-    .masonry-container {
+    .masonry {
         column-count: 1;
         column-width: 100%;
     }
